# SiliconLucid

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  copy_resources.sh
examples/: test_all.cpp  test_entt.cpp  test_imgui.cpp  test_info.cpp
extras/test_all/: fractal.lua  test.sl
include/: Colour.hpp  SiliconLucid.hpp
include/slew/: slew.hpp
resources/: LICENSE
src/: Main.cpp  slew.cpp
